# langchain

00_openai_sdk/openai-hello-world/: main.py  pyproject.toml  stream.py
01_components/: component.ipynb
02_model/: main.py  pyproject.toml
02_model/LLM/: llm.py
deepseek/: .env  main.py  pyproject.toml
